--- a/hw3.html
+++ b/hw3.html
@@ -10,5 +10,5 @@
     <div class="tooltip"></div>
     <svg class="bubble-chart"></svg>
     <svg class="donut-chart"></svg>
-    <script src="/js/hw3.js" async></script>
+    <script src="/js/hw3.js"></script>
 </body>
